# data-spector

./: README.md  requirements.txt  setup.cfg  setup.py
src/data_spector/: __init__.py  differentiator.py  inspector.py  utils.py
