[metadata]
name = data-spector
author = See AUTHORS
author-email = alexandre.huynen@gmail.com
summary = Set of utilities to inspect, compare and summarise data sets
description-file = README.md
home-page = https://github.com/AlexandreHuynen/data-spector
classifier =
    License :: OSI Approved :: MIT license
    Programming Language :: Python
    Programming Language :: Python :: 3.6

[files]
packages = data-spector
